add all folders/subfolders to git

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Progress_Report_Week_1.docx
 Project Summary.docx
 scale-1200x0x0x0-doublediamo-1450457896-65-600x359@2x.png
 Temp Sensors BoM.xlsx
+Environmental Sensors/
+
