add webhook examples

--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -1,5 +1,5 @@
-[test]
-host = localhost
-database = ICP_TEST
-user = admin
-password = CSHS2009
+[ICP]
+host = 10.0.10.220: XXXX
+database = ICP
+user = trans
+password = GreenX0123
